# Radar-Soberano

./: CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
radar_soberano/: __init__.py  __main__.py  alerts.py  analyzer.py  buffett.py  cli.py  config.py  database.py  earnings.py  history.py  indicators.py  portfolio.py  price_targets.py  sector_rules.py  universe.py
radar_soberano/web/: __init__.py  server.py
radar_soberano/web/static/: index.html
tests/: test_alerts.py  test_analyzer.py  test_buffett.py  test_indicators.py  test_portfolio.py  test_price_targets.py  test_sector_rules.py  test_web.py
